# agentLang

./: .gitignore  CLAUDE.md  Dockerfile  JOURNAL.md  README.md  benchmark.py  blog.html  blog_post.md  buggy_function.py  buggy_lru_cache.py  config.py  conftest.py  docker-compose.yml  exp_7b.py  exp_cross_process.py  exp_cross_process_a.py  exp_cross_process_b.py  exp_long_context.py  exp_rope_ablation.py  exp_scaling_curve.py  exp_system_prompt_sweep.py  fix_blog_charts.py  merge_exp3_7.py  pyproject.toml  smoke_quality.py  test_buggy_function.py  test_buggy_lru_cache.py
pipelines/: __init__.py  kv_cache.py  standard.py
results/: exp002_rope_ablation_20260426_151529.json  exp003_scaling_20260426_151700.json  exp004_7b_20260426_154730.json  exp005_cross_process_20260426_163556.json  exp006_prompt_sweep_20260426_162720.json  exp007_long_context_20260427_032139.json  results_20260426_143944.json  results_20260426_145210.json
