[project]
name = "latent-agent-poc"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.37.0",
    "accelerate>=0.26.0",
    "pytest>=7.4.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipelines"]
